# fibonacccy

./: README.md  build.sh  pyproject.toml
fibonacccy/: fibonacci.py  fibonacci_lists.py
fibonacccy/clang_version/: build.sh  fibonacci.c
fibonacccy/rust_version/: lib.rs  libfibonacccy_rs.dylib  libmerkle_root.dylib  merkle_root_lib.rs
tests/: test_benchmark.py  test_fibonacci.py  test_fibonacci_list.py  test_merkle_root.py
