[tool.poetry]
name = "fibonacccy"
version = "0.1.0"
description = ""
authors = ["Lucas Oliveira <olivmath@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cffi = "^1.16.0"

[tool.poetry.extras]
clang = ["cffi"]
rust = ["cffi"]

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pyclean = "^2.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
