[tool.poetry]
name = "fibonacccy"
version = "0.2.0"
description = ""
authors = ["Lucas Oliveira <olivmath@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest-benchmark = "^4.0.0"
pyclean = "^2.7.5"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
